crates/plotnik-tests/tests/02-parser/recovery_validation/type_annotation_lowercase.txt
Q = (a) @x :: foo
------------------ DIAGNOSTICS -------------------
error: unknown capture type `foo`
 --> query.ptk:1:15
  |
1 | Q = (a) @x :: foo
  |               ^^^
  |
help: write `:: str`, `:: bool`, or a PascalCase custom capture type such as `:: MyType`
